<resources>
    <string name="app_name">MentalUp</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Register</string>
    <string name="company_logo">Company Logo</string>
    <string name="text_email">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_activities">Activities</string>
    <string name="text_profile">Profile</string>
    <string name="text_statistics">Statistics</string>
</resources>