<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="260dp"
        android:layout_height="154dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="80dp"
        android:text="@string/text_profile"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStats" />

    <Button
        android:id="@+id/buttonActivities"
        android:layout_width="260dp"
        android:layout_height="154dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_activities"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/buttonStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStats"
        android:layout_width="260dp"
        android:layout_height="154dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_statistics"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/buttonProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonActivities" />
</androidx.constraintlayout.widget.ConstraintLayout>